updated new design

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../assets/stylesheet.css">
 </head>
 <body>
-
     <nav id="mySidenav" class="sidenav">
         <svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg" onclick="closeNav()" class="closebtn">
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 0.707107 0.707107 -0.707107 11 12.1211)" fill="#F4EADD"/>
@@ -16,8 +15,6 @@
         <a href="../work">Work</a>
         <a href="./index.html">About</a>
     </nav>
-
-<div id="main-page">
     <header>
         <div id="logo">
             <div class="logo-header">
@@ -59,80 +56,90 @@
         </svg>    
     </div>
     <main id="about">
-        <div id="heading">
-            <div class="double-title">About</div>
-            <h1>And this is me ✨</h1>
-        </div>
-        <div class="section-1">
-            <div class="description about">
-                <p>
-                    Hello, my name is Pabla Marmolejo. 
-                    I am a UX/UI designer based in Barcelona. 
-                    I am currently studying for a Master’s Degree 
-                    in Digital Experience Design at BAU.
-                </p>
-                <p>
-                    My skills range from UI design, UX research to 
-                    frontend (HTML and CSS), and UX writing. I like 
-                    to think of myself as a jack of all trades: 
-                    Besides UX/UI design, I’ve also studied translation 
-                    and languages (Spanish, English, and French).
-                </p>
-                <p class="last-line">
-                    I like working with companies that bring innovation 
-                    to the picture, and that are not afraid to challenge 
-                    themselves. I am a creative and self-determined person, 
-                    but I am first and foremost a dreamer.
-                </p>
+        <div id="main-screen">
+            <div class="title">Pabla Marmolejo</div>
+            <h1>About me</h1>
+            <div class="description">
+                <p>Get to know me a little better</p>
             </div>
-            <img class="profile" src="../assets/img/profile-450px.png" />
         </div>
-        <div class="section-2">
-            <div class="description about">
-                <div class="studies">
-                    <p class="lines">
+        <div class="about-screen">
+            <div class="project-screen reverse">
+                <img src="../assets/img/profile-450px.png" />
+                <div class="project-description">
+                    <h3>¡Hola!</h3>
+                    <p>
+                        Hello, my name is Pabla Marmolejo. 
+                        I am a UX/UI designer based in Barcelona. 
+                        I am currently studying for a Master’s Degree 
+                        in Digital Experience Design at BAU.
+                    </p>
+                    <p>
+                        My skills range from UI design, UX research to 
+                        frontend (HTML and CSS), and UX writing. I like 
+                        to think of myself as a jack of all trades: 
+                        Besides UX/UI design, I’ve also studied translation 
+                        and languages (Spanish, English, and French).
+                    </p>
+                    <p>
+                        I like working with companies that bring innovation 
+                        to the picture, and that are not afraid to challenge 
+                        themselves. I am a creative and self-determined person, 
+                        but I am first and foremost a dreamer.
+                    </p>
+                </div>
+            </div>
+            <div class="project-screen studies">
+                <div class="project-description">
+                    <h3>My studies</h3>
+                    <p>
                         Master in Digital Experience Design - BAU
                     </p>
-                    <p class="lines">
+                    <p>
                         UX/UI Design Course - UXER School
                     </p>
-                    <p class="lines">
+                    <p>
                         Master in Translation Studies - UPF
                     </p>
-                    <p class="lines">
+                    <p>
                         Bachelor’s Degree in Translation - PUCV
                     </p>
                 </div>
             </div>
-            <img class="profile-2" src="../assets/img/profile-2-450px.png" />
-        </div>
-        <div class="section-3">
-            <p>
-                And now, some random facts about me:
-            </p>
-            <p>
-                🇨🇱 I was born and raised in Chile.
-            </p>
-            <p>
-                📍 I love languages and travelling. Since 2017, I have lived in Paris, Liège, and now Barcelona. My favourite place in the world is Vitoria, a city in the Basque Country.
-            </p>
-            <p>
-                🎶 I am a Beatle fan.
-            </p>
-            <p class="last-line">
-                🍰 And I am very good at baking desserts (and eating them too).
-            </p>
-        </div>
-        <div id="contact">
-            <div class="section-1">
-                <div>
-                    <h2>Contact</h2>
-                    <p>We are just a few clicks away.</p>
+
+            <div class="project-screen">
+                <img src="../assets/img/profile-2-450px.png" />
+                <div class="project-description">
+                    <p>
+                        And now, some random facts about me:
+                    </p>
+                    <p>
+                        🇨🇱 I was born and raised in Chile.
+                    </p>
+                    <p>
+                        📍 I love languages and travelling. Since 2017, I have lived in Paris, Liège, and now Barcelona. My favourite place in the world is Vitoria, a city in the Basque Country.
+                    </p>
+                    <p>
+                        🎶 I am a Beatle fan.
+                    </p>
+                    <p class="last-line">
+                        🍰 And I am very good at baking desserts (and eating them too).
+                    </p>
                 </div>
-                <div class="contact-links">
+            </div>
+        </div>    
+        <div id="contact">
+            <h2>Contact</h2>
+            <div class="description">
+                <p>We are just a few clicks away.</p>
+            </div>
+            <div class="contact-links">
+                <div>
                     <h3>Send me an email</h3>
                     <p>pabla.marmolejo@gmail.com</p>
                     <a href="../assets/img/cv-pabla-marmolejo.pdf">Read my cv</a>
+                </div>
+                <div>
                     <h3>Want to know more?</h3>
                     <div class="media">
                         <a href="https://www.linkedin.com/in/pabla-marmolejo/"><svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -154,9 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <h4>Shall we begin?</h4>
-            </div>
+            <div class="final-sentence">Shall we begin?</div>
         </div>
     </main>
     <footer>
@@ -172,11 +177,10 @@
                 </svg>
                 <a href="../index.html">Pabla Marmolejo</a>
             </div>
-            <a class="funny-link-mobile" href="../hidden-page/">Don't tap here</a>
-            <a class="funny-link-desktop" href="../hidden-page/">Don't click here</a>
+            <a class="funny-link-mobile" href="./hidden-page/">Don't tap here</a>
+            <a class="funny-link-desktop" href="./hidden-page/">Don't click here</a>
         </div>
     </footer>
-</div>
 <script>
     function openNav() {
         document.getElementById("main-page").style.display = "none";
