--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="assets/stylesheet.css">
 </head>
 <body>
-
     <nav id="mySidenav" class="sidenav">
         <svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg" onclick="closeNav()" class="closebtn">
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 0.707107 0.707107 -0.707107 11 12.1211)" fill="#F4EADD"/>
@@ -16,8 +15,6 @@
         <a href="./work/index.html">Work</a>
         <a href="./about/index.html">About</a> 
     </nav>
-
-<div id="main-page">
     <header>
         <div id="logo">
             <div class="logo-header">
@@ -59,87 +56,73 @@
         </svg>    
     </div>
     <main id="home">
-        <div id="heading">
-            <div class="double-title">
-                <div>UX/UI</div>
-                <div class="second-line-title">DESIGNER</div>
+        <div id="main-screen">
+            <div class="title">Pabla Marmolejo</div>
+            <h1>UX/UI Designer</h1>
+            <div class="description">
+                <p>My name is <span class="bold-text">Pabla</span>, and I’m a UX/UI designer based in Barcelona.</p>
+                <p>Check out my work, and have a <span class="bold-text">look around</span>, no pressure. Mi casa es su casa.</p>
             </div>
-            <div class="double-title home">UX/UI DESIGNER</div>
-            <h1 id="home-title">Oh, hello you ✨</h1>
+            <div class="link-hidden-page">
+                <a href="hidden-page/index.html"><p>Don't click here</p></a>
+            </div>
         </div>    
-        <div class="section-1 home">
-            <div class="description home">
-                <p>
-                    My name is <span class="bold-text">Pabla</span>, and I’m a UX/UI designer based in Barcelona.
-                </p>
-                <p>
-                    Check out my work, and have a <span class="bold-text">look around</span>, no pressure. Mi casa es su casa.
-                </p>
-            </div>
-        </div>
-        <div id="home-work">
-            <div class="section-1">
-                <div class="description home">
-                    <h2 id="work-title">Work</h2>
-                    <div>
-                        <p>As a UX/UI designer, I take part in every single step of the process. From research, 
-                            content strategy and experience design, to frontend and testing.
-                        </p>
-                    </div>
+        <div id="work-screen">
+            <div class="work-description">
+                <h2>Work</h2>
+                <div class="description">
+                    <p>As a UX/UI designer, I take part in every single step of the process. From research, content strategy and experience design, to frontend and testing.</p>
                 </div>
             </div>
-            <div class="section-2">
-                <div class="projects">
-                    <div class="project-section">
-                        <img src="assets/img/space-travel-cover.png" />
-                        <div class="project-description">
-                            <div class="double-title projects">UX/UI DESIGN</div>
-                            <h3>Space Travel</h3>
-                            <p>
-                                Class exercise which consisted in designing the landing page of a made-up travel agency. 
-                                The design involved working with elements such as content, typography, images, colours, and layout.
-                            </p>
-                            <a href="./project-space-travel">I want to know more</a>
-                        </div>
-                    </div>
-                    <div class="project-section invert">
-                        <img class="img-invert" src="assets/img/adecco-cover.png" />
-                        <div class="project-description">
-                            <div class="double-title projects">CASE STUDY</div>
-                            <h3>Adecco</h3>
-                            <p>
-                                Case study focused on solving problems in the original design, such as error prevention, 
-                                registration process and forms.
-                            </p>
-                            <a href="./project-adecco">I want to know more</a>
-                        </div>
-                    </div>
-                    <div class="project-section">
-                        <img src="assets/img/antartica-cover.png" />
-                        <div class="project-description">
-                            <div class="double-title projects">CASE STUDY</div>
-                            <h3>Antártica Libros</h3>
-                            <p>
-                                Case study focused on redesigning an e-commerce website and making 
-                                it more accessible for any kind of users.
-                            </p>
-                            <a href="./project-antartica-libros">I want to know more</a>
-                        </div>
-                    </div>
+            <div class="project-screen">
+                <img src="assets/img/adecco-cover.png" />
+                <div class="project-description">
+                    <div class="project-category">Case study - UX design</div>
+                    <h3>Adecco</h3>
+                    <p>
+                        Case study focused on solving problems in the original design, such as error prevention, 
+                        registration process and forms.
+                    </p>
+                    <a href="./project-adecco">I want to know more</a>
+                </div>
+            </div>
+            <div class="project-screen reverse">
+                <img src="assets/img/antartica-cover.png" />
+                <div class="project-description">
+                    <div class="project-category">Case study - UX design</div>
+                    <h3>Antártica Libros</h3>
+                    <p>
+                        Case study focused on redesigning an e-commerce website and making 
+                        it more accessible for any kind of users.
+                    </p>
+                    <a href="./project-antartica-libros">I want to know more</a>
+                </div>
+            </div>
+            <div class="project-screen">
+                <img src="assets/img/space-travel-cover.png" />
+                <div class="project-description">
+                    <div class="project-category">UI design</div>
+                    <h3>Space Travel</h3>
+                    <p>
+                        Class exercise which consisted in designing the landing page of a made-up travel agency. 
+                        The design involved working with elements such as content, typography, images, colours, and layout.
+                    </p>
+                    <a href="./project-space-travel">I want to know more</a>
                 </div>
             </div>
         </div>
-        
         <div id="contact">
-            <div class="section-1">
+            <h2>Contact</h2>
+            <div class="description">
+                <p>We are just a few clicks away.</p>
+            </div>
+            <div class="contact-links">
                 <div>
-                    <h2>Contact</h2>
-                    <p>We are just a few clicks away.</p>
-                </div>
-                <div class="contact-links">
                     <h3>Send me an email</h3>
                     <p>pabla.marmolejo@gmail.com</p>
                     <a href="./assets/img/cv-pabla-marmolejo.pdf">Read my cv</a>
+                </div>
+                <div>
                     <h3>Want to know more?</h3>
                     <div class="media">
                         <a href="https://www.linkedin.com/in/pabla-marmolejo/"><svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -161,9 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <h4>Shall we begin?</h4>
-            </div>
+            <div class="final-sentence">Shall we begin?</div>
         </div>
     </main>
     <footer>
@@ -183,7 +164,6 @@
             <a class="funny-link-desktop" href="./hidden-page/">Don't click here</a>
         </div>
     </footer>
-</div>
 <script>
     function openNav() {
         document.getElementById("main-page").style.display = "none";
