--- a/project-space-travel/index.html
+++ b/project-space-travel/index.html
@@ -59,86 +59,80 @@
         </svg>    
     </div>
     <main id="work">
-        <div id="heading">
-            <div class="double-title">
-                <div>UX/UI</div>
-                <div class="second-line-title">DESIGN</div>
-            </div>
-            <div class="double-title home">UX/UI DESIGN</div>
-            <h1 class="project">Space Travel 🚀</h1>
+        <div id="main-screen">
+            <div class="title">Space Travel</div>
+            <h1>UI design</h1>
         </div>
-        <div id="projects">
-            <div class="description">
+        <div id="work-screen">
+            <div class="project-screen">
                 <img src="../assets/img/space-travel-cover.png" />
-            </div>
-            <div class="project-intro">
-                <div class="project-title">
-                    <h2>The Project</h2>
-                </div>
-                <h3>TL;DR</h3>
-                <p>
-                    Space Travel is a travel agency specialised 
-                    in trips to Mars. It offers its clients a unique 
-                    experience, and it is one of the most renowned 
-                    agencies. The client has asked the design of a 
-                    landing page that would attract potential customers.
-                </p>
-                <h3>Role</h3>
-                <p>
-                    UX/UI Designer
-                </p>
-                <h3>Tools</h3>
-                <p>
-                    Figma, Miro, Adobe Photoshop
-                </p>
-            </div>
-        </div>
-        <div class="the-section">
-            <div class="wrapper">
-                <h3>The solution</h3>
-                <div class="wrapper-flex">
-                    <div class="text-wrapper-flex">
-                        <p>
-                            The main objective is to attract new customers. 
-                            That is why I have opted for a landing page that 
-                            has an impact and evoques emotion. The design 
-                            is also minimalist, as well as elegant.
-                        </p>
-                        <img src="../assets/img/wireframes-space-travel.png" />
-                    </div>
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/wireframe-space-travel-desktop.png" />
+                <div class="project-description">
+                    <div class="project-category">TL;DR</div>
+                    <h3>The project</h3>
+                    <p>
+                        Space Travel is a travel agency specialised 
+                        in trips to Mars. It offers its clients a unique 
+                        experience, and it is one of the most renowned 
+                        agencies. The client has asked the design of a 
+                        landing page that would attract potential customers.
+                    </p>
+                    <div class="project-details">
+                        <h3>Role</h3>
+                        <p>UX/UI Designer</p>
+                        <h3>Tools</h3>
+                        <p>Figma, Miro, Adobe Photoshop</p>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="the-section">
-            <div class="wrapper">
-                <h3>The design</h3>
-                <p>
-                    Typography, sizes, and colours. Iconography 
-                    and web elements like buttons and links.
-                </p>
-                <div class="wrapper-flex">
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/design-space-travel.png" />
+            <div class="the-section">
+                <div class="wrapper">
+                    <h3>The solution</h3>
+                    <div class="wrapper-flex">
+                        <div class="text-wrapper-flex">
+                            <p>
+                                The main objective is to attract new customers. 
+                                That is why I have opted for a landing page that 
+                                has an impact and evoques emotion. The design 
+                                is also minimalist, as well as elegant.
+                            </p>
+                            <img src="../assets/img/wireframes-space-travel.png" />
+                        </div>
+                        <div class="img-wrapper-flex">
+                            <img src="../assets/img/wireframe-space-travel-desktop.png" />
+                        </div>
                     </div>
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/design-space-travel-desktop.png" />
+                </div>
+            </div>
+            <div class="the-section">
+                <div class="wrapper">
+                    <h3>The design</h3>
+                    <div class="wrapper-flex">
+                        <div class="text-wrapper-flex">
+                            <p>
+                                Typography, sizes, and colours. Iconography 
+                                and web elements like buttons and links.
+                            </p>
+                            <img src="../assets/img/design-space-travel.png" />                            
+                        </div>
+                        <div class="img-wrapper-flex">
+                            <img src="../assets/img/design-space-travel-desktop.png" />
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div id="contact">
-            <div class="section-1">
+            <h2>Contact</h2>
+            <div class="description">
+                <p>We are just a few clicks away.</p>
+            </div>
+            <div class="contact-links">
                 <div>
-                    <h2>Contact</h2>
-                    <p>We are just a few clicks away.</p>
-                </div>
-                <div class="contact-links">
                     <h3>Send me an email</h3>
                     <p>pabla.marmolejo@gmail.com</p>
                     <a href="../assets/img/cv-pabla-marmolejo.pdf">Read my cv</a>
+                </div>
+                <div>
                     <h3>Want to know more?</h3>
                     <div class="media">
                         <a href="https://www.linkedin.com/in/pabla-marmolejo/"><svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -160,9 +154,7 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <h4>Shall we begin?</h4>
-            </div>
+            <div class="final-sentence">Shall we begin?</div>
         </div>
     </main>
     <footer>
@@ -178,8 +170,8 @@
                 </svg>
                 <a href="../index.html">Pabla Marmolejo</a>
             </div>
-            <a class="funny-link-mobile" href="../hidden-page/">Don't tap here</a>
-            <a class="funny-link-desktop" href="../hidden-page/">Don't click here</a>
+            <a class="funny-link-mobile" href="./hidden-page/">Don't tap here</a>
+            <a class="funny-link-desktop" href="./hidden-page/">Don't click here</a>
         </div>
     </footer>
 </div>
